# technical-resource-db

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  tox.ini
technical_resource_db_py/: manage.py
technical_resource_db_py/technicalresourcedb/: asgi.py  settings.py  urls.py  wsgi.py
technical_resource_db_webui/: package-lock.json  package.json
