[tool.poetry]
name = "technical-resource-db"
version = "0.1.0"
description = "Technical Resource Database for upvoted links to study from."
authors = [
    "Amogh Madan <amoghmadaan@gmail.com>",
    "Ayushi Agrawal <ayushiag@gmail.com>",
]
readme = "README.md"
packages = [{include = "technical_resource_db"}]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3.2.0,<3.3.0"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
django-guardian = "^2.4.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
tox = "^3.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
extend-exclude = '''
^.*\b(migrations)\b.*$
'''


[tool.bandit]
exclude_dirs = [
    "./.eggs",
    "./.git",
    "./.tox",
    "./build",
    "./coverage",
    "./dist",
    "./venv",
    "./__pycache__",
    "*tests*",
]
